# bondocs

./: .bondocs.example.toml  .bondocs.toml  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO.md  format.bat  format.sh  pyproject.toml
.github/workflows/: ci.yml
docs/runbook/: deployment.md
src/bondocs/: __init__.py  _version.py  changelog.py  cli.py  config.py  diff.py  document.py  git.py  interfaces.py  llm.py  patcher.py  prompt.md  prompt.py  runbook.py
src/bondocs/core/: __init__.py  config.py  errors.py  interfaces.py
src/bondocs/document/: __init__.py  changelog.py  document.py  patcher.py  runbook.py
src/bondocs/git/: __init__.py  diff.py  git.py
src/bondocs/providers/: __init__.py  llm.py  prompt.py
src/bondocs/utils/: __init__.py  templates.py
tests/: conftest.py  test_changelog.py  test_cli_fallback.py  test_config.py  test_diff.py  test_end_to_end.py  test_errors.py  test_fallback_integration.py  test_llm.py
